--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "minimum-stability": "dev",
     "require": {
         "silex/silex": "^2.2",
-        "twig/twig": "^2.4"
+        "twig/twig": "^2.4",
+        "phpunit/phpunit": "^6.4@dev"
     }
 }
